--- a/views/admin/pages/account/garbage.view.ejs
+++ b/views/admin/pages/account/garbage.view.ejs
@@ -164,6 +164,7 @@
     <script src="/admin/scripts/deleteGarbage.js"></script>
     <script src="/admin/scripts/restoreGarbage.js"></script>
     <script src="/admin/scripts/changeMulti.js"></script>
+    <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
