--- a/views/admin/pages/account/update.view.ejs
+++ b/views/admin/pages/account/update.view.ejs
@@ -170,6 +170,7 @@
     <!-- Script File -->
     <script src="/admin/scripts/previewImage.js"></script>
     <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
