--- a/views/admin/pages/order/order.view.ejs
+++ b/views/admin/pages/order/order.view.ejs
@@ -32,6 +32,8 @@
     </div>
 
     <!-- Script File -->
+    <script src="/admin/scripts/toggleAccountInfo.js"></script>
+    
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/aaf479b433.js" crossorigin="anonymous"></script>
