--- a/views/admin/pages/permission/permission.view.ejs
+++ b/views/admin/pages/permission/permission.view.ejs
@@ -352,6 +352,7 @@
     <!-- Script File -->
     <script src="/admin/scripts/permission/update.js"></script>
     <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
