--- a/views/admin/pages/product/product.view.ejs
+++ b/views/admin/pages/product/product.view.ejs
@@ -258,6 +258,7 @@
     <script src="/admin/scripts/changeMulti.js"></script>
     <script src="/admin/scripts/product/sort.js"></script>
     <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
