--- a/views/admin/pages/role/role.view.ejs
+++ b/views/admin/pages/role/role.view.ejs
@@ -146,6 +146,7 @@
     <script src="/admin/scripts/changeStatus.js"></script>
     <script src="/admin/scripts/changeMulti.js"></script>
     <script src="/admin/scripts/delete.js"></script>
+    <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
