--- a/public/admin/styles/style.css
+++ b/public/admin/styles/style.css
@@ -1,6 +1,6 @@
 /* Header */
 .header {
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-admin);
   padding: 10px 0px;
   position: sticky;
   top: 0;
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-admin);
   overflow: hidden;
 }
 .header .inner-auth .account-button-info .account-avatar img {
@@ -61,7 +61,7 @@
 /* Body */
 .body .sider {
   width: 150px;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-admin);
   color: #fff;
   height: calc(100vh - 56px);
   position: fixed;
@@ -89,10 +89,10 @@
   display: block;
   color: #fff;
   text-decoration: none;
-  border-bottom: 1px solid var(--hover-color);
+  border-bottom: 1px solid var(--hover-color-admin);
 }
 .sider .inner-menu ul li a:hover {
-  background-color: var(--hover-color);
+  background-color: var(--hover-color-admin);
   transition: 0.4s ease-out;
 }
 .sider .inner-menu ul li a i {
@@ -126,7 +126,7 @@
   padding: 5px 10px;
   display: flex;
   justify-content: space-between;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-admin);
   color: white;
 }
 .modal-black .modal-bg .modal-body {
@@ -196,7 +196,7 @@
   .body .sider {
     width: 100%;
     height: auto;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-admin);
     color: #fff;
     position: fixed;
     top: 56px;
@@ -214,9 +214,9 @@
     border-bottom: none;
     height: 100%;
     text-align: center;
-    border-left: 1px solid var(--hover-color);
-    border-right: 1px solid var(--hover-color);
-    border-top: 1px solid var(--hover-color);
+    border-left: 1px solid var(--hover-color-admin);
+    border-right: 1px solid var(--hover-color-admin);
+    border-top: 1px solid var(--hover-color-admin);
   }
   .sider .inner-menu ul li a i {
     display: none;
@@ -235,7 +235,7 @@
   width: 300px;
   margin: auto;
   padding: 10px;
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--primary-color-admin);
   border-radius: 10px;
   box-sizing: content-box;
 }
