--- a/views/client/partials/header-mobile.view.ejs
+++ b/views/client/partials/header-mobile.view.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6 header-mobie-logo">
-        <a href="" class="logo-link"
+        <a href="/" class="logo-link"
           ><img
             src="/client/images/Benefit_Cosmetics_logo.png"
             alt="logo"
@@ -28,13 +28,7 @@
 <nav class="navheader-mobie">
   <div class="navheader-mobie-box">
     <div class="navheader-mobie-bg">
-      <div class="col-12">
-        <div class="navheader-mobie-delete">
-          <i class="bi bi-x-lg"></i>
-        </div>
-      </div>
-
-      <div class="col-12">
+      <div class="col-12 mt-5">
         <div class="navheader-mobie-nav">
           <ul class="nav-list">
             <li class="nav-item">
@@ -44,7 +38,7 @@
               <a href="" class="nav-link"><i class="fa-solid fa-hand me-2"></i>Giới thiệu</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link"
+              <a href="/products" class="nav-link"
                 ><i class="bi bi-list-columns-reverse me-2"></i>Sản phẩm</a
               >
             </li>
