--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= pageTitle %></title>
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
@@ -32,7 +33,8 @@
     <!-- End Styles Library & Framework Link -->
   </head>
   <body>
-    <%-include('../../partials/header.view.ejs', {categoryListTree: categoryTree}); %>
+    <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive:
+    "active", aboutActive: '', productActive: '', newsActive: '', contactActive: '' }); %>
     <%-include("../../partials/header-mobile.view.ejs") %>
 
     <!-- Scripts File -->
