show product list client

--- a/views/admin/pages/category/create.view.ejs
+++ b/views/admin/pages/category/create.view.ejs
@@ -47,7 +47,7 @@
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="parent_id"
-                    ><span class="text-danger"><b>*</b></span> Danh mục cha</label
+                    ><span class="text-danger"></span> Danh mục cha</label
                   >
                   <!-- <input type="text" name="parent_id" id="parent_id" class="form-control" /> -->
                   <select name="parent_id" id="parent_id" class="form-control">
