--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -149,37 +149,43 @@
           <div class="product__list">
             <!-- Product list -->
             <div class="row g-2">
+              <% productList.forEach(product => { %>
               <!-- Card -->
               <div class="col-lg-3 col-md-4 col-6">
-                <div class="card__bg">
+                <div class="card__bg" title="<%= product.title %>">
                   <div class="card__image">
                     <img
-                      src="https://image.hsv-tech.io/1987x0/bbx/ahc-hyaluronic-dewy-radiance-cleansing-foam-1_ba661dc9ee4148a9a4877503206bae0f.jpg"
+                      src="<%= product.thumbnail %>"
                       alt="product"
                       width="100%"
                       class="card__thumbnail"
                     />
                   </div>
-                  <div class="content-font card__title mt-1">Sản phẩm 01</div>
+                  <div class="content-font card__title mt-1">
+                    <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %>
+                    <% } else { %> <%= product.title %><% } %>
+                  </div>
                   <div class="card__box d-flex justify-content-between align-items-center">
-                    <h5 class="title-font card__price">300$</h5>
+                    <h5 class="title-font card__price">
+                      $<%= Number.parseFloat(product.price - (product.price / 100 *
+                      product.discount)).toFixed(2) %>
+                    </h5>
                     <div class="card__favorite">
                       <i class="bi bi-suit-heart-fill"></i>
                     </div>
                   </div>
                   <div class="card__rating d-flex justify-content-between align-items-center">
                     <div class="card__star">
+                      <% for(let i = 1; i <= product.rating; i++) { %>
                       <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
+                      <% } %>
                     </div>
                     <i title="add to cart" class="bi bi-bag-check-fill"></i>
                   </div>
                 </div>
               </div>
               <!-- End card -->
+              <% }) %>
             </div>
             <!-- End product list -->
 
