--- a/public/client/styles/pages/product/product.css
+++ b/public/client/styles/pages/product/product.css
@@ -54,6 +54,7 @@
 /* Product Card */
 .card__bg {
   width: 100%;
+  /* height: 100% !important; */
   padding: 10px;
   height: auto;
   color: var(--dark-gray-color);
