--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -39,178 +39,182 @@
     aboutActive: '', productActive: "active", newsActive: '', contactActive: '' }); %>
     <%-include("../../partials/header-mobile.view.ejs") %>
 
-    <h1 class="heading-font product__list-heading">Danh Sách Sản Phẩm</h1>
+    <main class="main">
+      <h1 class="heading-font product__list-heading">Danh Sách Sản Phẩm</h1>
 
-    <div class="container">
-      <div class="row">
-        <!-- Filter -->
-        <div class="col-lg-3 col-md-4 col-12">
-          <div class="product__filter p-3">
-            <div class="product__filter-delete mb-4 justify-content-between align-items-center">
-              <span>Bộ Lọc Sản Phẩm</span>
-              <button class="content-font product__filter-close"><i class="bi bi-x-lg"></i></button>
-            </div>
-
-            <div class="product__filter-category mb-4">
-              <h4 class="title-font filter__category-title">Danh mục</h4>
-              <ul class="filter__category-list">
-                <li class="filter__category-item">
-                  <a href="" class="filter__category-link">Nailcare</a>
-                </li>
-                <li class="filter__category-item">
-                  <a href="" class="filter__category-link">Haircare</a>
-                </li>
-                <li class="filter__category-item">
-                  <a href="" class="filter__category-link">Skincare</a>
-                </li>
-                <li class="filter__category-item">
-                  <a href="" class="filter__category-link">Bodycare</a>
-                </li>
-                <li class="filter__category-item">
-                  <a href="" class="filter__category-link">Makeup</a>
-                </li>
-                <li class="filter__category-item">
-                  <a href="" class="filter__category-link">Perfume</a>
-                </li>
-              </ul>
-              <hr />
-            </div>
-
-            <div class="product__filter-price mb-4">
-              <h4 class="title-font filter__price-title">Mức giá</h4>
-              <input
-                type="range"
-                class="filter__price-range w-100"
-                id="price"
-                value="2000000"
-                min="0"
-                max="10000000"
-                step="1000"
-              />
-              <div class="filter__price-minmax d-flex justify-content-between">
-                <span class="content-font filter__price-min">Từ: 1.000</span>
-                <span class="content-font filter__price-max">Đến: 10.000.000</span>
+      <div class="container">
+        <div class="row">
+          <!-- Filter -->
+          <div class="col-lg-3 col-md-4 col-12">
+            <div class="product__filter p-3">
+              <div class="product__filter-delete mb-4 justify-content-between align-items-center">
+                <span>Bộ Lọc Sản Phẩm</span>
+                <button class="content-font product__filter-close">
+                  <i class="bi bi-x-lg"></i>
+                </button>
               </div>
-              <hr />
-            </div>
 
-            <div class="product__filter-freeship mb-4">
-              <h4 class="title-font filter__freeship-title">Freeship</h4>
-              <label for="freeship" class="content-font">Miễn phí vận chuyển</label>
-              <input type="checkbox" class="filter__freeship-input ms-2" id="freeship" />
-              <hr />
-            </div>
-
-            <div class="product__filter-sale mb-4">
-              <h4 class="title-font filter__sale-title">Sale</h4>
-              <label for="sale" class="content-font">Đang giảm giá</label>
-              <input type="checkbox" class="filter__sale-input ms-2" id="sale" />
-              <hr />
-            </div>
-          </div>
-        </div>
-        <!-- End filter -->
-
-        <div class="col-lg-9 col-md-8 col-12">
-          <!-- Filter close -->
-          <div class="product__filter-remove mb-1 d-none">
-            <ul class="filter__remove-list d-flex gap-1 ps-0">
-              <li class="filter__remove-item p-2 bg-light" category>
-                <span class="content-font filter__remove-title">Danh mục</span>
-                <i class="bi bi-x-lg"></i>
-              </li>
-              <li class="filter__remove-item p-2 bg-light" price>
-                <span class="content-font filter__remove-title">Mức giá</span>
-                <i class="bi bi-x-lg"></i>
-              </li>
-            </ul>
-          </div>
-          <!-- End filter close -->
-
-          <!-- Product filter mobile -->
-          <div class="product__filter-mobile justify-content-between mb-3">
-            <div class="content-font product__filter-quantity">
-              <select name="" id="" class="filter__quantity-limit">
-                <option value="" disabled selected class="filter__quantity-option">
-                  -- Hiển thị --
-                </option>
-                <option value="10" class="filter__quantity-option">10</option>
-                <option value="15" class="filter__quantity-option">15</option>
-                <option value="20" class="filter__quantity-option">20</option>
-              </select>
-            </div>
-
-            <div class="content-font product__filter-button">
-              <button class="filter__button-show">Bộ lọc<i class="bi bi-filter ms-2"></i></button>
-            </div>
-          </div>
-          <!-- End product filter mobile -->
-
-          <div class="product__list">
-            <!-- Product list -->
-            <div class="row g-2">
-              <% productList.forEach(product => { %>
-              <!-- Card -->
-              <div class="col-lg-3 col-md-4 col-6">
-                <div class="card__bg" title="<%= product.title %>">
-                  <div class="card__image">
-                    <img
-                      src="<%= product.thumbnail %>"
-                      alt="product"
-                      width="100%"
-                      class="card__thumbnail"
-                    />
-                  </div>
-                  <div class="content-font card__title mt-1">
-                    <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %>
-                    <% } else { %> <%= product.title %><% } %>
-                  </div>
-                  <div class="card__box d-flex justify-content-between align-items-center">
-                    <h5 class="title-font card__price">
-                      $<%= Number.parseFloat(product.price - (product.price / 100 *
-                      product.discount)).toFixed(2) %>
-                    </h5>
-                    <div class="card__favorite">
-                      <i class="bi bi-suit-heart-fill"></i>
-                    </div>
-                  </div>
-                  <div class="card__rating d-flex justify-content-between align-items-center">
-                    <div class="card__star">
-                      <% for(let i = 1; i <= product.rating; i++) { %>
-                      <i class="bi bi-star-fill"></i>
-                      <% } %>
-                    </div>
-                    <i title="add to cart" class="bi bi-bag-check-fill"></i>
-                  </div>
-                </div>
-              </div>
-              <!-- End card -->
-              <% }) %>
-            </div>
-            <!-- End product list -->
-
-            <!-- Product Pagination -->
-            <div class="row g-2">
-              <div class="product__pagination mt-5 d-flex justify-content-center">
-                <ul class="content-font product__pagination-list ps-0 d-flex">
-                  <li class="product__pagination-item page__prev">
-                    <i class="bi bi-arrow-left-short"></i>
+              <div class="product__filter-category mb-4">
+                <h4 class="title-font filter__category-title">Danh mục</h4>
+                <ul class="filter__category-list">
+                  <li class="filter__category-item">
+                    <a href="" class="filter__category-link">Nailcare</a>
                   </li>
-                  <li class="product__pagination-item page__number">1</li>
-                  <li class="product__pagination-item page__number">2</li>
-                  <li class="product__pagination-item page__number">3</li>
-                  <li class="product__pagination-item page__number">4</li>
-                  <li class="product__pagination-item page__next">
-                    <i class="bi bi-arrow-right-short"></i>
+                  <li class="filter__category-item">
+                    <a href="" class="filter__category-link">Haircare</a>
+                  </li>
+                  <li class="filter__category-item">
+                    <a href="" class="filter__category-link">Skincare</a>
+                  </li>
+                  <li class="filter__category-item">
+                    <a href="" class="filter__category-link">Bodycare</a>
+                  </li>
+                  <li class="filter__category-item">
+                    <a href="" class="filter__category-link">Makeup</a>
+                  </li>
+                  <li class="filter__category-item">
+                    <a href="" class="filter__category-link">Perfume</a>
                   </li>
                 </ul>
+                <hr />
+              </div>
+
+              <div class="product__filter-price mb-4">
+                <h4 class="title-font filter__price-title">Mức giá</h4>
+                <input
+                  type="range"
+                  class="filter__price-range w-100"
+                  id="price"
+                  value="2000000"
+                  min="0"
+                  max="10000000"
+                  step="1000"
+                />
+                <div class="filter__price-minmax d-flex justify-content-between">
+                  <span class="content-font filter__price-min">Từ: 1.000</span>
+                  <span class="content-font filter__price-max">Đến: 10.000.000</span>
+                </div>
+                <hr />
+              </div>
+
+              <div class="product__filter-freeship mb-4">
+                <h4 class="title-font filter__freeship-title">Freeship</h4>
+                <label for="freeship" class="content-font">Miễn phí vận chuyển</label>
+                <input type="checkbox" class="filter__freeship-input ms-2" id="freeship" />
+                <hr />
+              </div>
+
+              <div class="product__filter-sale mb-4">
+                <h4 class="title-font filter__sale-title">Sale</h4>
+                <label for="sale" class="content-font">Đang giảm giá</label>
+                <input type="checkbox" class="filter__sale-input ms-2" id="sale" />
+                <hr />
               </div>
             </div>
-            <!-- End product pagination -->
+          </div>
+          <!-- End filter -->
+
+          <div class="col-lg-9 col-md-8 col-12">
+            <!-- Filter close -->
+            <div class="product__filter-remove mb-1 d-none">
+              <ul class="filter__remove-list d-flex gap-1 ps-0">
+                <li class="filter__remove-item p-2 bg-light" category>
+                  <span class="content-font filter__remove-title">Danh mục</span>
+                  <i class="bi bi-x-lg"></i>
+                </li>
+                <li class="filter__remove-item p-2 bg-light" price>
+                  <span class="content-font filter__remove-title">Mức giá</span>
+                  <i class="bi bi-x-lg"></i>
+                </li>
+              </ul>
+            </div>
+            <!-- End filter close -->
+
+            <!-- Product filter mobile -->
+            <div class="product__filter-mobile justify-content-between mb-3">
+              <div class="content-font product__filter-quantity">
+                <select name="" id="" class="filter__quantity-limit">
+                  <option value="" disabled selected class="filter__quantity-option">
+                    -- Hiển thị --
+                  </option>
+                  <option value="10" class="filter__quantity-option">10</option>
+                  <option value="15" class="filter__quantity-option">15</option>
+                  <option value="20" class="filter__quantity-option">20</option>
+                </select>
+              </div>
+
+              <div class="content-font product__filter-button">
+                <button class="filter__button-show">Bộ lọc<i class="bi bi-filter ms-2"></i></button>
+              </div>
+            </div>
+            <!-- End product filter mobile -->
+
+            <div class="product__list">
+              <!-- Product list -->
+              <div class="row g-2">
+                <% productList.forEach(product => { %>
+                <!-- Card -->
+                <div class="col-lg-3 col-md-4 col-6">
+                  <div class="card__bg" title="<%= product.title %>">
+                    <div class="card__image">
+                      <img
+                        src="<%= product.thumbnail %>"
+                        alt="product"
+                        width="100%"
+                        class="card__thumbnail"
+                      />
+                    </div>
+                    <div class="content-font card__title mt-1">
+                      <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...'
+                      %> <% } else { %> <%= product.title %><% } %>
+                    </div>
+                    <div class="card__box d-flex justify-content-between align-items-center">
+                      <h5 class="title-font card__price">
+                        $<%= Number.parseFloat(product.price - (product.price / 100 *
+                        product.discount)).toFixed(2) %>
+                      </h5>
+                      <div class="card__favorite">
+                        <i class="bi bi-suit-heart-fill"></i>
+                      </div>
+                    </div>
+                    <div class="card__rating d-flex justify-content-between align-items-center">
+                      <div class="card__star">
+                        <% for(let i = 1; i <= product.rating; i++) { %>
+                        <i class="bi bi-star-fill"></i>
+                        <% } %>
+                      </div>
+                      <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                    </div>
+                  </div>
+                </div>
+                <!-- End card -->
+                <% }) %>
+              </div>
+              <!-- End product list -->
+
+              <!-- Product Pagination -->
+              <div class="row g-2">
+                <div class="product__pagination mt-5 d-flex justify-content-center">
+                  <ul class="content-font product__pagination-list ps-0 d-flex">
+                    <li class="product__pagination-item page__prev">
+                      <i class="bi bi-arrow-left-short"></i>
+                    </li>
+                    <li class="product__pagination-item page__number">1</li>
+                    <li class="product__pagination-item page__number">2</li>
+                    <li class="product__pagination-item page__number">3</li>
+                    <li class="product__pagination-item page__number">4</li>
+                    <li class="product__pagination-item page__next">
+                      <i class="bi bi-arrow-right-short"></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- End product pagination -->
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
     <!-- Scripts File -->
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
