--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/client/styles/partials/header.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.responsive.css" />
+    <link rel="stylesheet" href="/client/styles/partials/footer.css" />
     <!-- End Styles File -->
 
     <!-- Styles Library & Framework Link -->
@@ -617,6 +618,8 @@
       </section>
       <!-- End Google Map - Location -->
     </main>
+
+    <%-include('../../partials/footer.view.ejs') %>
 
     <!-- Scripts File -->
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
