--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/client/styles/pages/index/index.responsive.css" />
     <link rel="stylesheet" href="/client/styles/pages/product/product.css" />
     <link rel="stylesheet" href="/client/styles/pages/product/product.responsive.css" />
+    <link rel="stylesheet" href="/client/styles/partials/footer.css" />
     <!-- End Styles File -->
 
     <!-- Styles Library & Framework Link -->
@@ -215,6 +216,8 @@
         </div>
       </div>
     </main>
+
+    <%-include("../../partials/footer.view.ejs") %>
 
     <!-- Scripts File -->
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
